more on the examples

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,7 @@ book:
     - zvalues.Rmd
     - standard-normal-curve.Rmd
     - standard-normal-table.Rmd
+    - backwards-problems.Rmd
     - latex.Rmd
     - references.qmd
 
